crates/analyzer/tests/snapshots/errors__call_create_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No function `create` exists on type `Bar`
  ┌─ compile_errors/call_create_with_wrong_type.fe:5:13
  │
5 │         Bar.create(ctx, true)
  │             ^^^^^^ undefined function


